--- a/app/globals.css
+++ b/app/globals.css
@@ -73,7 +73,8 @@ nav::after {
     transparent 124px
   );
   pointer-events: none;
-  z-index: 1;
+  z-index: 0
+  ;
 }
 
 /* ========================= */
